--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -1,3 +1,5 @@
+<navigation></navigation>
+
 <div class="container">
     <div class="jumbotron">
         <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ vm.pageHeader.title }} </h1>
