--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -1,11 +1,8 @@
 <navigation></navigation>
 
 <div class="container">
-    <div class="jumbotron">
-        <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ vm.pageHeader.title }} </h1>
-        <p>{{ vm.pageHeader.tagline }}</p> 
-        <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a></p>
-    </div>
+    
+    <page-header content="vm.pageHeader"></page-header>
 
     <div class="row">
         <div class="image-filter text-center">
