--- a/client/index.html
+++ b/client/index.html
@@ -10,21 +10,12 @@
         <link rel="stylesheet" href="/css/main.css" type="text/css">
     </head>
     
-<body>
-	
-    <div ng-view></div>
-    
+<body ng-view>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/angular/angular.min.js" type="text/javascript"></script>
     <script src="/lib/angular-route.min.js" type="text/javascript"></script>
     <script src="/angular/imageGalleryApp.min.js" type="text/javascript"></script>
-    <!--
-    <script src="app.js" type="text/javascript"></script>
-    <script src="/common/services/imageData.service.js" type="text/javascript"></script>
-    <script src="/common/directives/imageHover.directive.js" type="text/javascript"></script>
-    <script src="/home/home.controller.js" type="text/javascript"></script>
-    -->
     <script src="/js/scripts.js" type="text/javascript"></script>
     <script src="/js/validation.js" type="text/javascript"></script>
 </body>
