--- a/client/common/directives/navigation/navigation.template.html
+++ b/client/common/directives/navigation/navigation.template.html
@@ -11,8 +11,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-nav-demo">
             <ul class="nav navbar-nav">
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/#about">About</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/account/signup">Sign Up</a></li>
