--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/angular/angular.min.js" type="text/javascript"></script>
     <script src="/lib/angular-route.min.js" type="text/javascript"></script>
+    <script src="/lib/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="/angular/imageGalleryApp.min.js" type="text/javascript"></script>
     <script src="/js/scripts.js" type="text/javascript"></script>
     <script src="/js/validation.js" type="text/javascript"></script>
