Set up basic image detail view and route

--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -16,7 +16,7 @@
             <div image-hover class="image-hover">
                 <div class="thumbnail">
                     <div class="image-wrap">
-                        <a href="/images/{{ image._id }}">
+                        <a href="/#/images/{{ image._id }}">
                             <img src="{{ image.url }}">
                             <div class="image-overlay">
                                 <h3 class="overlay-content">
