--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -18,7 +18,7 @@
                             <p><a href="#" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
                         </div>
                     </div>
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
+                    <button ng-click="vm.commentModal()" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Add Comment</button>
                     <a href="/" class="btn btn-default btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
  Back to Gallery</a>
                 </div>
