--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
     <script src="/angular/angular.min.js" type="text/javascript"></script>
     <script src="/lib/angular-route.min.js" type="text/javascript"></script>
     <script src="/lib/angular-sanitize.min.js" type="text/javascript"></script>
+    <script src="/lib/ui-bootstrap-custom-0.12.0.min.js" type="text/javascript"></script>
+    <script src="/lib/ui-bootstrap-custom-tpls-0.12.0.min.js" type="text/javascript"></script>
     <script src="/angular/imageGalleryApp.min.js" type="text/javascript"></script>
 </body>
 </html>
