--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -1,69 +1,29 @@
 <navigation></navigation>
 
 <div class="container">
-        <div class="row">
-            <div class="jumbotron">
-                <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ vm.data.image.title }} </h1>
-                <p class="lead">{{ vm.data.image.description }}</p>
-                <button id="btn-like" class="btn btn-success pull-left">{{ vm.data.image.likes }} <i class="fa fa-star" aria-hidden="true"></i></button>
-                <p class="username pull-right">Created By: <a href="#"><strong> {{ vm.data.image.creator }} </strong></a>&nbsp;<span class="text-muted pull-right">{{ vm.data.image.createdOn | date: 'dd MMMM yyyy' }}</span></p>
+    <div class="row">
+        <div class="jumbotron">
+            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ vm.data.image.title }} </h1>
+            <p class="lead">{{ vm.data.image.description }}</p>
+            <button id="btn-like" class="btn btn-success pull-left">{{ vm.data.image.likes }} <i class="fa fa-star" aria-hidden="true"></i></button>
+            <p class="username pull-right">Created By: <a href="#"><strong> {{ vm.data.image.creator }} </strong></a>&nbsp;<span class="text-muted pull-right">{{ vm.data.image.createdOn | date: 'dd MMMM yyyy' }}</span></p>
+        </div>
+        <div class="image-container">
+            <div class="col-md-6 thumbnail">
+                <a href="{{ vm.data.image.url }}" class="lightbox-trigger"><img src="{{ vm.data.image.url }}" class="align-left img-responsive" alt="image"></a>
             </div>
-            <div class="image-container">
-                <div class="col-md-6 thumbnail">
-                    <a href="{{ vm.data.image.url }}" class="lightbox-trigger"><img src="{{ vm.data.image.url }}" class="align-left img-responsive" alt="image"></a>
-                </div>
-                <div class="col-md-6">
-                    <div class="scrollable comments-section">
-                        <div class="comment" ng-repeat="comment in vm.data.image.comments | orderBy: 'createdOn': true">
-                            <p><a href="#" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
-                        </div>
+            <div class="col-md-6">
+                <div class="scrollable comments-section">
+                    <div class="comment" ng-repeat="comment in vm.data.image.comments | orderBy: 'createdOn': true">
+                        <p><a href="#" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
                     </div>
-                    <button ng-click="vm.commentModal()" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Add Comment</button>
-                    <a href="/" class="btn btn-default btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
- Back to Gallery</a>
                 </div>
+                <button ng-click="vm.commentModal()" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
+                <a href="/" class="btn btn-default btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
+Back to Gallery</a>
             </div>
         </div>
     </div>
-    
-    <!-- Comment Modal -->
-    <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                           <i class="fa fa-times" aria-hidden="true"></i>
-                           <span class="sr-only">Close</span>
-                    </button>
-                    <h4 class="modal-title" id="commentModalLabel">
-                        Comment on {{ vm.data.image.title }}
-                    </h4>
-                </div>
-
-                <!-- Comment Modal Body -->
-                <div class="modal-body">
-                    <form action="/images/<%= image._id %>/comments" method="POST" id="comment-form" class="form-horizontal">
-                        <div class="form-group">
-                            <div class="col-sm-10">
-                                <input id="author-input" type="text" class="form-control" name="author" placeholder="Name">
-                            </div>
-                        </div>
-                         <div class="form-group">
-                            <div class="col-sm-10">
-                                <textarea id="content-input" rows="5" class="form-control" name="content" placeholder="Comment"></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10 text-center">
-                                <button type="submit" class="btn btn-default pull-right"><i class="fa fa-comment" aria-hidden="true"></i>  Add Comment</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Comment Modal End -->
+</div>
 
 <footer-basic></footer-basic>
