Pass image data into comment modal

--- a/client/commentModal/commentModal.view.html
+++ b/client/commentModal/commentModal.view.html
@@ -7,7 +7,7 @@
                <span class="sr-only">Close</span>
         </button>
         <h4 class="modal-title" id="commentModalLabel">
-            Comment on {{ vm.data.image.title }}
+            Comment on {{ vm.imageData.imageTitle }}
         </h4>
     </div>
 
