--- a/client/commentModal/commentModal.view.html
+++ b/client/commentModal/commentModal.view.html
@@ -13,11 +13,12 @@
 
     <!-- Comment Modal Body -->
     <div class="modal-body">
-        <form action="/images/<%= image._id %>/comments" method="POST" id="comment-form" class="form-horizontal">
+        <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
+        <form ng-submit="vm.onSubmit()" role="form" id="addComment" name="addComment" class="form-horizontal">
             <div class="form-group">
                 <label for="name" class="col-xs-2 col-sm-2 control-label">Name: </label>
                 <div class="col-xs-10 col-sm-10">
-                    <input id="name" ng-model="vm.formData.name" type="text" class="form-control" name="author" placeholder="Name" required="required">
+                    <input id="name" ng-model="vm.formData.name" type="text" class="form-control" name="name" placeholder="Name">
                 </div>
             </div>
              <div class="form-group">
