--- a/client/auth/register/register.view.html
+++ b/client/auth/register/register.view.html
@@ -4,13 +4,13 @@
     <page-header content="vm.pageHeader"></page-header>
 
     <div class="row">
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-md-offset-3 col-sm-12">
             <p class="lead">Already a member? Please <a href="/#login?page={{ vm.returnPage }}">log in</a> instead.</p>
             <form ng-submit="vm.onSubmit()">
                 <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
                 <div class="form-group">
-                    <label for="name">Username: </label>
-                <input type="text" class="form-control" id="username" placeholder="Enter your username" ng-model="vm.credentials.name">
+                    <label for="username">Username: </label>
+                <input type="text" class="form-control" id="username" placeholder="Enter your username" ng-model="vm.credentials.username">
                 </div>
                 <div class="form-group">
                   <label for="password">Password: </label>
