--- a/client/common/directives/navigation/navigation.template.html
+++ b/client/common/directives/navigation/navigation.template.html
@@ -14,8 +14,8 @@
                 <li><a href="/#about">About</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/account/signup">Sign Up</a></li>
-                <li><a href="/account/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </div>
