--- a/client/auth/login/login.view.html
+++ b/client/auth/login/login.view.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-12">
-            <p class="lead">Already have an account? Please <a href="/#login?page={{ vm.returnPage }}">log in</a> instead.</p>
+            <p class="lead">Don't ave an account? Please <a href="/#register?page={{ vm.returnPage }}">register</a> instead.</p>
             <form ng-submit="vm.onSubmit()">
                 <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
                 <div class="form-group">
@@ -16,7 +16,7 @@
                   <label for="password">Password: </label>
                   <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
                 </div>
-                <button type="submit" class="btn btn-default">Sign Up!</button>
+                <button type="submit" class="btn btn-default">Login</button>
             </form>
         </div>
     </div>
