--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -3,10 +3,11 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
+            <p class="username pull-right">Created By: <a href="#"><strong> {{ vm.data.image.creator }} </strong></a></p>
             <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ vm.data.image.title }} </h1>
             <p class="lead">{{ vm.data.image.description }}</p>
-            <button id="btn-like" class="btn btn-success pull-left">{{ vm.data.image.likes }} <i class="fa fa-star" aria-hidden="true"></i></button>
-            <p class="username pull-right">Created By: <a href="#"><strong> {{ vm.data.image.creator }} </strong></a>&nbsp;<span class="text-muted pull-right">{{ vm.data.image.createdOn | date: 'dd MMMM yyyy' }}</span></p>
+            <p class="text-muted pull-right">{{ vm.data.image.createdOn | date: 'dd MMMM yyyy' }}</p>
+            <button ng-click="vm.commentModal()" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
         </div>
         <div class="image-container">
             <div class="col-md-6 thumbnail">
@@ -18,9 +19,6 @@
                         <p><a href="#" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
                     </div>
                 </div>
-                <button ng-click="vm.commentModal()" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
-                <a href="/" class="btn btn-default btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
-Back to Gallery</a>
             </div>
         </div>
     </div>
