--- a/client/auth/login/login.view.html
+++ b/client/auth/login/login.view.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-12">
-            <p class="lead">Don't ave an account? Please <a href="/#register?page={{ vm.returnPage }}">register</a> instead.</p>
+            <p class="lead">Don't have an account yet? Please <a href="/#register?page={{ vm.returnPage }}">register</a> instead.</p>
             <form ng-submit="vm.onSubmit()">
                 <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
                 <div class="form-group">
