--- a/client/auth/register/register.view.html
+++ b/client/auth/register/register.view.html
@@ -16,7 +16,7 @@
                   <label for="password">Password: </label>
                   <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
                 </div>
-                <button type="submit" class="btn btn-default">Sign Up!</button>
+                <button type="submit" class="btn btn-success">Sign Up</button>
             </form>
         </div>
     </div>
