--- a/client/common/directives/navigation/navigation.template.html
+++ b/client/common/directives/navigation/navigation.template.html
@@ -13,9 +13,13 @@
             <ul class="nav navbar-nav">
                 <li><a href="/#about">About</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
+            <ul ng-hide="navvm.isLoggedIn" class="nav navbar-nav navbar-right">
+                <li><a href="/#register/?page={{ navvm.currentPath }}">Sign Up</a></li>
+                <li><a href="/#login/?page={{ navvm.currentPath }}">Sign In</a></li>
+            </ul>
+            <ul ng-show="navvm.isLoggedIn" class="nav navbar-nav navbar-right">
+                <li><a href="#">Welcome, {{ navvm.currentUser.username }}!</a></li>
+                <li><a href="#" ng-click="navvm.logout()">Logout</a></li>
             </ul>
         </div>
     </div>
