--- a/client/common/directives/pageHeader/pageHeader.template.html
+++ b/client/common/directives/pageHeader/pageHeader.template.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
     <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> {{ content.title }} </h1>
     <p>{{ content.subtitle }}</p> 
-    <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a></p>
+    <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Gallery</a></p>
 </div>
