--- a/client/commentModal/commentModal.view.html
+++ b/client/commentModal/commentModal.view.html
@@ -15,12 +15,6 @@
     <div class="modal-body">
         <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
         <form ng-submit="vm.onSubmit()" role="form" id="addComment" name="addComment" class="form-horizontal">
-            <div class="form-group">
-                <label for="name" class="col-xs-2 col-sm-2 control-label">Name: </label>
-                <div class="col-xs-10 col-sm-10">
-                    <input id="name" ng-model="vm.formData.name" type="text" class="form-control" name="name" placeholder="Name">
-                </div>
-            </div>
              <div class="form-group">
                 <label for="content" class="col-xs-2 col-sm-2 control-label">Comment: </label>
                 <div class="col-xs-10 col-sm-10">
@@ -29,7 +23,7 @@
             </div>
             <div class="modal-footer">
                 <button ng-click="vm.modal.cancel()" type="button" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary"><i class="fa fa-comment" aria-hidden="true"></i>  Add Comment</button>
+                <button type="submit" class="btn btn-success"><i class="fa fa-comment" aria-hidden="true"></i>  Add Comment</button>
             </div>
         </form>
     </div>
