--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="image-filter text-center">
             <h3>{{ vm.message }}</h3>
-            <label for="filter">Filter results: </label> &nbsp;
+            <label for="filter">Search The Gallery: </label> &nbsp;
             <input id="filter" type="text" name="filter" ng-model="textFilter">
         </div>
     </div>
