--- a/client/addImageModal/addImageModal.view.html
+++ b/client/addImageModal/addImageModal.view.html
@@ -28,9 +28,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="url" class="col-xs-2 col-sm-2 control-label">Image URL: </label>
+                <label for="url" class="col-xs-2 col-sm-2 control-label">URL: </label>
                 <div class="col-xs-10 col-sm-10">
-                    <textarea id="content-input"  type="text" ng-model="vm.formData.url" class="form-control" name="url" placeholder="Image URL"></textarea>
+                    <input id="content-input"  type="text" ng-model="vm.formData.url" class="form-control" name="url" placeholder="Image URL">
                 </div>
             </div>
             <div class="modal-footer">
