--- a/client/auth/login/login.view.html
+++ b/client/auth/login/login.view.html
@@ -16,7 +16,7 @@
                   <label for="password">Password: </label>
                   <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-lg btn-primary text-center">Login</button>
             </form>
         </div>
     </div>
