--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -1,11 +1,10 @@
 <navigation></navigation>
 
 <div class="container">
-    
     <div class="jumbotron">
         <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Gallery </h1>
         <p>A user supported collection of beautiful images</p> 
-        <p ng-show="vm.isLoggedIn"><a ng-click="vm.addImageModal()" class="btn btn-primary btn-large" data-toggle="modal">Add a New Image To The Gallery</a></p>
+        <p ng-show="vm.isLoggedIn"><a ng-click="vm.addImageModal()" class="btn btn-primary btn-lg" data-toggle="modal">Add a New Image To The Gallery</a></p>
         <p ng-hide="vm.isLoggedIn" ><a href="/#/login?page={{ vm.currentPath }}" class="btn btn-lg btn-primary">Login to Add An Image</a></p>
 </div>
     <div class="row">
@@ -16,7 +15,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-sm-6 col-xs-12" ng-repeat="image in vm.data.images | filter: textFilter">
+        <div class="col-md-6 col-sm-6 col-xs-12" ng-repeat="image in vm.data.images | filter: textFilter">
             <div image-hover class="image-hover">
                 <div class="thumbnail">
                     <div class="image-wrap">
