--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <p class="username pull-right">Created By: <a href="#"><strong> {{ vm.data.image.creator }} </strong></a></p>
+            <p class="username pull-right">Created By: <a href="/users/{{ vm.data.image.creator }}"><strong> {{ vm.data.image.creator }} </strong></a></p>
             <h1></span> {{ vm.data.image.title }}</h1>
             <p class="lead">{{ vm.data.image.description }}</p>
             <h2><a href="#"><i class="fa fa-heart like-btn" aria-hidden="true"></i></a> {{ vm.data.image.likes }}</h2>
@@ -19,12 +19,12 @@
         </div>
         <div class="image-container">
             <div class="col-md-6 thumbnail">
-                <a href="{{ vm.data.image.url }}"><img src="{{ vm.data.image.url }}" class="align-left img-responsive" alt="image"></a>
+                <a href="{{ vm.data.image.url }}" target="_blank"><img src="{{ vm.data.image.url }}" class="align-left img-responsive" alt="image"></a>
             </div>
             <div class="col-md-6">
                 <div class="scrollable comments-section">
                     <div class="comment" ng-repeat="comment in vm.data.image.comments | orderBy: 'createdOn': true">
-                        <p><a href="#" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
+                        <p><a href="/users/{{ comment.author }}" class="username"><strong>{{ comment.author }}</strong></a>&nbsp;<span class="text-muted">({{ comment.createdOn | date: 'dd-mm-yy hh:mm a' }})</span>&nbsp;<span>{{ comment.content }}</span></p>
                     </div>
                 </div>
             </div>
