Add delete image confirm modal to details view page

--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -14,7 +14,7 @@
             </div>
             <div ng-show="vm.userIsImageCreator">
                 <a class="btn btn-lg btn-warning"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>
-                <button ng-click="vm.deleteImage()" class="btn btn-lg btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</button>
+                <button ng-click="vm.deleteImageModal()" class="btn btn-lg btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</button>
             </div>
         </div>
         <div class="image-container">
