--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="/css/main.css" type="text/css">
     </head>
     
-<body ng-view>    
+<body>    
+    <div class="ng-view"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/angular/angular.min.js" type="text/javascript"></script>
