--- a/client/imageDetail/imageDetail.view.html
+++ b/client/imageDetail/imageDetail.view.html
@@ -6,14 +6,14 @@
             <p class="username pull-right">Created By: <a href="/users/{{ vm.data.image.creator }}"><strong> {{ vm.data.image.creator }} </strong></a></p>
             <h1></span> {{ vm.data.image.title }}</h1>
             <p class="lead">{{ vm.data.image.description }}</p>
-            <h2><a href="#"><i class="fa fa-heart like-btn" aria-hidden="true"></i></a> {{ vm.data.image.likes }}</h2>
             <p class="text-muted pull-right">{{ vm.data.image.createdOn | date: 'dd MMMM yyyy' }}</p>
             <div ng-hide="vm.userIsImageCreator">
+                <h2 ng-show="vm.isLoggedIn"><a href="#"><i class="fa fa-heart like-btn" aria-hidden="true"></i></a> {{ vm.data.image.likes }}</h2>
                 <button ng-show="vm.isLoggedIn" ng-click="vm.commentModal()" class="btn btn-lg btn-primary" data-toggle="modal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
                 <a ng-hide="vm.isLoggedIn" href="/#/login?page={{ vm.currentPath }}" class="btn btn-lg btn-primary"><i class="fa fa-comment" aria-hidden="true"></i> Login to Comment</a>
             </div>
             <div ng-show="vm.userIsImageCreator">
-                <a class="btn btn-lg btn-warning"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>
+                <a ng-click="vm.updateImageModal()" class="btn btn-lg btn-warning"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>
                 <button ng-click="vm.deleteImageModal()" class="btn btn-lg btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</button>
             </div>
         </div>
