--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -27,13 +27,13 @@
                                 <h2 class="overlay-content">
                                     <i class="fa fa-comment" aria-hidden="true"></i> {{ image.comments.length}} 
                                     &nbsp;
-                                    <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes }}
+                                    <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes.length }}
                                 </h2>
                             </div>
                         </a>
                     </div>
                     <div class="image-details">
-                        <a href="/images/{{ image._id }}">{{ image.title }}</a>{{ image.description }}
+                        <a href="/images/{{ image._id }}"><h3>{{ image.title }}</h3></a>{{ image.description }}
                     </div>
                 </div>
             </div>
