Move search below featured image

--- a/client/home/home.view.html
+++ b/client/home/home.view.html
@@ -8,34 +8,30 @@
         <p ng-hide="vm.isLoggedIn" ><a href="/#/login?page={{ vm.currentPath }}" class="btn btn-lg btn-primary">Login to Add An Image</a></p>
 </div>
     <div class="row">
+        <div class="col-md-10 col-md-offset-1" ng-show="vm.hasFeaturedImage()"> 
+            <h3 class="text-center">Featured Image</h3>
+            <div class="thumbnail">
+                <div class="image-wrap">
+                    <a href="/#/images/{{ vm.featuredImage._id }}">
+                        <img src="{{ vm.featuredImage.url }}">
+                        <div class="image-overlay">
+                            <h1 class="overlay-content">
+                                <i class="fa fa-comment" aria-hidden="true"></i> {{ vm.featuredImage.comments.length }} 
+                                <i class="fa fa-heart" aria-hidden="true"></i> {{ vm.featuredImage.likes.length }}
+                            </h1>
+                        </div>
+                    </a>
+                </div>
+                <div class="image-details">
+                    <a href="/images/{{ image._id }}"><h3>{{ vm.featuredImage.title }}</h3></a>{{ vm.featuredImage.description }}
+                </div>
+            </div>
+        </div>
         <div class="text-center">
             <div class="image-filter">
                 <h3>{{ vm.message }}</h3>
-                <label for="filter"><h3>Search The Gallery: </h3></label> &nbsp;
+                <label for="filter"><h2>Search The Gallery: </h2></label>
                 <input id="filter" type="text" name="filter" ng-model="textFilter">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1" ng-show="vm.hasFeaturedImage()"> 
-            <div class="well">
-                <h3 class="text-center">Featured Image</h3>
-                <div class="thumbnail">
-                    <div class="image-wrap">
-                        <a href="/#/images/{{ vm.featuredImage._id }}">
-                            <img src="{{ vm.featuredImage.url }}">
-                            <div class="image-overlay">
-                                <h1 class="overlay-content">
-                                    <i class="fa fa-comment" aria-hidden="true"></i> {{ vm.featuredImage.comments.length }} 
-                                    <i class="fa fa-heart" aria-hidden="true"></i> {{ vm.featuredImage.likes.length }}
-                                </h1>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="image-details">
-                        <a href="/images/{{ image._id }}"><h3>{{ vm.featuredImage.title }}</h3></a>{{ vm.featuredImage.description }}
-                    </div>
-                </div>
             </div>
         </div>
         <div class="col-md-6 col-sm-6 col-xs-12" ng-repeat="image in vm.data.images | filter: textFilter">
