--- a/client/users/users.view.html
+++ b/client/users/users.view.html
@@ -23,9 +23,9 @@
                             <img src="{{ image.url }}">
                             <div class="image-overlay">
                                 <h3 class="overlay-content">
-                                    <i class="fa fa-comment" aria-hidden="true"></i> {{ image.comments.length}} 
+                                    <i class="fa fa-comment" aria-hidden="true"></i> {{ image.comments.length }} 
                                     &nbsp;
-                                    <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes }}
+                                    <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes.length }}
                                 </h3>
                             </div>
                         </a>
