Update search filter on user pages

--- a/client/users/users.view.html
+++ b/client/users/users.view.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="image-filter text-center">
             <h3>{{ vm.message }}</h3>
-            <label for="filter">Search Images by {{ vm.username }}: </label> 
+            <label for="filter">Search for other images by {{ vm.username }}: </label> 
             <input id="filter" type="text" name="filter" ng-model="textFilter">
         </div>
     </div>
